--- a/style.css
+++ b/style.css
@@ -1,15 +1,109 @@
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Plus Jakarta Sans";
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4f7fd;
+}
+
+/* Left Nav Bar */
+
 nav {
-  background-color: aqua;
   width: 300px;
   height: 1024px;
+  background-color: white;
 }
+
+nav img {
+  width: 152.53px;
+  height: 25.22px;
+  margin-bottom: 54px;
+  margin-left: 34px;
+  margin-top: 32.78px;
+}
+
+nav h4 {
+  margin-left: 32px;
+  margin-bottom: 19px;
+}
+
+nav button {
+  width: 276px;
+  height: 48px;
+  background-color: #635fc7;
+  color: white;
+  border: none;
+  border-radius: 0 100px 100px 0px;
+}
+
+/* Main Header */
 
 header {
-  background-color: brown;
+  background-color: white;
+  width: 1140px;
+  font-weight: 700;
+  font-style: bold;
+  font-size: 24px;
+  line-height: 100%;
+  align-content: center;
+  padding-top: 29px;
+  padding: 24px;
 }
 
+/* Swimlane Content */
+
 main {
-  background-color: blueviolet;
+  display: flex;
+  flex-direction: row;
+}
+
+.column {
+  width: 280px;
+  margin-left: 24px;
+  margin-right: 19px;
+}
+
+.tickethead span {
+  width: 15px;
+  height: 15px;
+  background-color: #828fa3;
+  border-radius: 50%;
+  display: block;
+  margin-right: 12px;
+}
+
+.tickethead {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  color: #828fa3;
+  display: flex;
+  font-weight: 700;
+  font-style: bold;
+  font-size: 12px;
+}
+
+.tickets {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.ticket {
+  background-color: white;
+  width: 280px;
+  height: 60px;
+  border-radius: 8px;
+  box-shadow: 2px 2px #364e7e1a;
+  padding-top: 20px;
+  padding-left: 19px;
+  font-weight: 700;
+  font-style: bold;
+  font-size: 15px;
 }
 
 .kanban {
