--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@ nav img {
 nav h4 {
   margin-left: 32px;
   margin-bottom: 19px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 100%;
+  letter-spacing: 2.4px;
+  color: #828fa3;
 }
 
 nav button {
@@ -39,6 +44,8 @@ nav button {
   color: white;
   border: none;
   border-radius: 0 100px 100px 0px;
+  font-weight: 700;
+  font-size: 15px;
 }
 
 /* Main Header */
@@ -85,6 +92,7 @@ main {
   font-weight: 700;
   font-style: bold;
   font-size: 12px;
+  letter-spacing: 2.4px;
 }
 
 .tickets {
