--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav {
 
 nav img {
   width: 152.53px;
-  height: 25.22px;
+  height: 100%;
   margin-bottom: 54px;
   margin-left: 34px;
   margin-top: 32.78px;
@@ -69,16 +69,36 @@ main {
   flex-direction: row;
 }
 
-.column {
+.todo_column,
+.doing_column,
+.done_column {
   width: 280px;
   margin-left: 24px;
   margin-right: 19px;
 }
 
-.tickethead span {
+.todo_column span {
   width: 15px;
   height: 15px;
-  background-color: #828fa3;
+  background-color: #49c4e5;
+  border-radius: 50%;
+  display: block;
+  margin-right: 12px;
+}
+
+.doing_column span {
+  width: 15px;
+  height: 15px;
+  background-color: #8471f2;
+  border-radius: 50%;
+  display: block;
+  margin-right: 12px;
+}
+
+.done_column span {
+  width: 15px;
+  height: 15px;
+  background-color: #67e2ae;
   border-radius: 50%;
   display: block;
   margin-right: 12px;
@@ -106,14 +126,54 @@ main {
   width: 280px;
   height: 60px;
   border-radius: 8px;
-  box-shadow: 2px 2px #364e7e1a;
-  padding-top: 20px;
-  padding-left: 19px;
+  box-shadow: 3px 3px #364e7e1a;
   font-weight: 700;
   font-style: bold;
   font-size: 15px;
+  display: flex;
+  align-items: center;
+  padding-left: 24px;
 }
 
 .kanban {
   display: flex;
+}
+
+@media (max-width: 375px) {
+  .kanban {
+    flex-direction: column;
+  }
+
+  header {
+    display: none;
+  }
+
+  nav {
+    width: 375px;
+    height: 64px;
+  }
+
+  nav h4 {
+    display: none;
+  }
+
+  nav button {
+    display: none;
+  }
+
+  nav img {
+    padding-left: 16px;
+    padding-top: 20px;
+    padding-bottom: 19px;
+    margin: 0;
+  }
+
+  main {
+    flex-direction: column;
+  }
+
+  .ticket {
+    width: 280px;
+    height: 60px;
+  }
 }
